@@ -1,9 +1,14 @@
+2022-09-08 Marco Bodrato <bodrato@mail.dm.unipi.it>
+
+	* tests/t-powm.c: Test some corner cases (e.g. 1^0 mod 1).
+
 2022-09-05  Niels Möller  <nisse@lysator.liu.se>
 
 	* mini-gmp.c (mpz_powm): Fix case of x^0 (mod 1), should be 0.
 	Reported by Guido Vranken.
 
 2022-05-29 Marco Bodrato <bodrato@mail.dm.unipi.it>
+
 	* mini-mpq.c (mpq_helper_2exp): New helper (internal) function.
 
 2022-04-18  Niels Möller  <nisse@lysator.liu.se>
